[package]
name = "universal-liquidity-pool-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
anchor-lang = "0.31.0"
anyhow = "1.0.93"
solana-program = "2.2.1"
spl-token = "8.0.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
